app/kanban-control.scss
.custom-kanban {
    .kanban-wrapper {
        display: table;
        table-layout: fixed;
        width: 100%;
        height: 100%;
        background: #fff;
        max-height: 250px;
    }

    .kanban-group-title {
        background: #E8E8E8;
        padding: 12px;
        text-align: center;
        color: grey;
    }

    .kanban-group {
        display: table-cell;
        box-snap: border-box;
        width: auto;
        min-width: 200px;
        height: 100%;
        margin: 0 16px;
        border-right: 1px solid #ccc;
    }

    .kanban-group.no-border {
        border: none;
    }

    .clearfix:before, .clearfix:after {
        content: " ";
        display: table;
        clear: both;
    }
}

$border: 1px solid #ccc;
$marker-height: 3px;
.as-sortable-item {
    background-color: #ffffff;
    border-top: $marker-height solid #ccc;
    border-left: $border;
    border-right: $border;
    border-bottom: $border;

    cursor: pointer;
    margin: 6px;
    min-height: 20px;
    position: relative;
    z-index: 0;
    padding: 16px;
}

.as-sortable-item:before {
    content: "";
    position: absolute;
    left: 0px;
    top: -$marker-height;
    height: $marker-height;
    width: 100%;
}

$blue-marker: #326295;
$green-marker: #1E9C9F;
$red-marker: #ffa166;

.as-sortable-item:before {
    background: $blue-marker;
    outline: 1px solid $blue-marker;
}

.as-sortable-item.green:before {
    background: $green-marker;
    outline: 1px solid $green-marker;
}

.as-sortable-item.red:before {
    background: $red-marker;
    outline: 1px solid $red-marker;
}

.as-sortable-placeholder {
    background: #ececec;
    margin: 5px;
    border: 1px #b0b0b0 dashed;
    border-radius: 3px;
}

